# FRIPS_ROS

documentation/assets/: FRIPS_StackDataFlow.drawio  FRIPS_StackDataFlow_LayersStacks.drawio  MeasurementProcess.drawio  ROS_Infrastructure.puml  ROS_Infrastructure_TODO.puml  ROS_LayerBoundary.puml  ROS_SandboxPrinciple.puml  proposal_general_usecases.puml  proposal_solution_sequence.puml
documentation/general/: CoordinateSystems.md  FRIPS_C&C_StackOverview.md
documentation/misc/: CoordinateSystems.md
documentation/rover_launcher/: Sandboxing.md
documentation/rover_tools/: Sandboxing.md  Tools.md
src/documentation/rover_launcher/: Parameters.md
src/marvelmind_position_fusion/: CMakeLists.txt  package.xml
src/marvelmind_position_fusion/src/: marvelmind_position_fusion_node.cpp
src/marvelmind_ros2_msgs_upstream/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md
src/marvelmind_ros2_msgs_upstream/msg/: MarvelmindUserData.msg
src/marvelmind_ros2_msgs_upstream/srv/: MarvelmindAPI.srv
src/marvelmind_ros2_upstream/: CHANGELOG.rst  CMakeLists.txt  README.md  mm_api_call.bash  package.xml
src/marvelmind_ros2_upstream/config/: marvelmind_ros2_config.yaml  marvelmind_ros2_config.yaml.old
src/marvelmind_ros2_upstream/include/marvelmind_ros2/: marvelmind_api.h  marvelmind_api_ros2.hpp  marvelmind_hedge.h  marvelmind_ros2.hpp
src/marvelmind_ros2_upstream/launch/: marvelmind_api_ros2.launch.py  marvelmind_ros2.launch.py
src/marvelmind_ros2_upstream/src/: marvelmind_api.c  marvelmind_api_ros2.cpp  marvelmind_hedge.c  marvelmind_ros2.cpp
src/rover_controller/: CMakeLists.txt  package.xml
src/rover_controller/config/: params.yaml
src/rover_controller/src/: rover_controller_node.cpp
src/rover_forward_kinematics/: CMakeLists.txt  package.xml
src/rover_forward_kinematics/config/: params.yaml
src/rover_forward_kinematics/src/: rover_fwd_kinm_node.cpp
src/rover_interface/: CMakeLists.txt  package.xml
src/rover_interface/config/: params.yaml
src/rover_interface/include/rover_interface/: fsm.hpp  stxetx_protocol.h
src/rover_interface/src/: fsm.cpp  rover_interface_node.cpp  rover_interface_node.cpp.old  stxetx_protocol.c
src/rover_interface_definition/: CMakeLists.txt  package.xml
src/rover_interface_definition/include/rover_interface_definition/: stxetx_protocol.h
src/rover_interface_definition/src/: stxetx_protocol.c
src/rover_interface_messages/: CMakeLists.txt  package.xml
src/rover_interface_messages/msg/: ByteBuffer.msg  StxetxFrame.msg
src/rover_inverse_kinematics/: CMakeLists.txt  package.xml
src/rover_inverse_kinematics/config/: params.yaml
src/rover_inverse_kinematics/src/: rover_inv_kinm_node.cpp
src/rover_launcher/: CMakeLists.txt  package.xml
src/rover_launcher/config/: Parameters.md  params.yaml
src/rover_launcher/launch/: rover.launch.py  sandbox.launch.py
src/rover_messages/: CMakeLists.txt  package.xml
src/rover_messages/msg/: ByteBuffer.msg  Command.msg  Odometry.msg  RoverHeading.msg  SonarScan.msg  StxetxFrame.msg
src/rover_pose_estimator/: CMakeLists.txt  package.xml
src/rover_pose_estimator/config/: params.yaml
src/rover_pose_estimator/src/: rover_pose_estimator_node.cpp
src/rover_protocol_hub/: CMakeLists.txt  package.xml
src/rover_protocol_hub/config/: params.yaml
src/rover_protocol_hub/include/rover_protocol_hub/: little_endian_decoding.h  little_endian_encoding.hpp
src/rover_protocol_hub/src/: rover_protocol_hub_node.cpp
src/rover_protocol_messages/: CMakeLists.txt  package.xml
src/rover_tools/: package.xml  setup.cfg  setup.py
src/rover_tools/rover_tools/: gauss_simulator_node.py  simulator_node.py  tool_engine.py  visualizer_node.py
src/visualizer/: package.xml  setup.cfg  setup.py
src/visualizer/visualizer/: visualizer_node.py
